--- a/themes/big/layouts/partials/arsae-client.html
+++ b/themes/big/layouts/partials/arsae-client.html
@@ -1,8 +1,2 @@
 <!--letakkan kode ARSAE di bawah baris ini-->
-<script>
-var ars = 'https://www.tipsandroid.xyz/';
-
-if(['.google.', 'bing.', 'yandex.', 'facebook.', 'pinterest.'].some(s => document.referrer.toLowerCase().includes(s)) || ['fb', 'facebook', 'pinterest', 'twitter'].some(s => navigator.userAgent.toLowerCase().includes(s))){ window.location.href = ars + '/?arsae='+ encodeURIComponent(window.location.href) + '&arsae_ref='+ encodeURIComponent(document.referrer) }
-</script>
-
-<!--ads/auto.txt-->
+<script></script>
